# DeepNetPorting

./: CMakeLists.txt  README.md
cmake_modules/: FindTorch.cmake
devel/: set_env.sh
include/: cxxopts.hpp  detector.hpp  utils.hpp
scritps/: model_porting.py
src/: detector.cpp  main_detect.cpp  optimization_resnet.cpp  resnet18_test.cpp  resnet18rt_test.cpp
